kubernetes/envoy.yaml
    admin:
      address:
        socket_address: {address: 127.0.0.1, port_value: 9901}

    static_resources:
      listeners:
      - name: listener1
        address:
          socket_address: {address: 0.0.0.0, port_value: 8765}
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match: {prefix: "/restapi"}
                    route:
                      cluster: rust_http
                      timeout: 60s
                  - match: {prefix: "/matchengine.Matchengine"}
                    route:
                      cluster: grpc_exchange
                      timeout: 60s
              http_filters:
              - name: envoy.filters.http.grpc_json_transcoder
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                  proto_descriptor: "/tmp/envoy/matchengine.pb"
                  services: ["matchengine.Matchengine"]
                  convert_grpc_status: true
                  print_options:
                    add_whitespace: true
                    always_print_primitive_fields: true
                    always_print_enums_as_ints: false
                    preserve_proto_field_names: true
              - name: envoy.filters.http.router

      clusters:
      - name: grpc_exchange
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        dns_lookup_family: V4_ONLY
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: grpc_exchange
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: dingir-matchengine
                    port_value: 50051

      - name: rust_http
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        dns_lookup_family: V4_ONLY
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http_protocol_options: {}
        load_assignment:
          cluster_name: rust_http
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: dingir-restapi
                    port_value: 50053
