kubernetes/restapi-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: matching-engine-restapi
  name: matching-engine-restapi
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: matching-engine-restapi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: matching-engine-restapi
    spec:
      containers:
        - image: gcr.io/bitraw-backend/dingir-restapi
          imagePullPolicy: IfNotPresent
          name: matching-engine-restapi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          env:
            - name: RUN_MODE
              value: staging
            - name: RUST_LOG
              value: debug,matchengine=debug
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
