kubernetes/restapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dingir-restapi
spec:
  type: ClusterIP
  selector:
    app: dingir-restapi
  ports:
  - protocol: TCP
    port: 50053
    targetPort: 50053
